Add voluntary host-initiated detach for the Win32 backend
New public EmbedSocketWin32 mirrors jembetter-core-x11's EmbedSocket as
the Win32 advanced API - not at parity yet, but no longer just
EmbedHost's narrow single-client facade either. detachClient() releases
the currently embedded HWND back to the desktop window at its current
screen position (via Win32Reparent#release + the new screenPosition
primitive) without firing onClientDetached, then lets the host embed a
different client next.

Extracted the embed/watch mechanics EmbedHostWin32 already had into a
new package-private Win32EmbedCore so EmbedHostWin32 and EmbedSocketWin32
share one implementation instead of duplicating it - EmbedHostWin32 is
now a thin delegate over it, deliberately still without detachClient
(EmbedHost's own Javadoc documents that as out of scope for the narrow
facade).

Fixed a latent bug surfaced by adding detach: handleClientDetached fired
onDetached unconditionally on process exit, even for a window no longer
tracked as embedded (already detached, or replaced by a later embed).
Now guarded on embeddedHwnd still matching, the same way the X11 side
already relies on WindowDeathWatcher#unwatch for the same guarantee.

Confirmed under Wine: EmbedHostWin32Test's existing 5 cases still pass
against the refactored delegate, and 2 new EmbedSocketWin32Test cases
cover detachClient() itself (releases without firing onClientDetached,
and allows embedding a different client afterward). Full mvn test green
across all modules.

Updated docs/win32-status.md: detach moved from "Not yet implemented"
to "Confirmed working" (Wine-only, no real-machine spike yet, same
caveat as the other Wine-only rows in that table).